tests/snapshots/examples_fixtures/basics__array_hash_combo.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/basics/array_hash_combo.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E300]: TYPE UNIFICATION ERROR

The arms of this `match` expression produce different types.

  --> examples/basics/array_hash_combo.flx:22:13
   |
21 |     Some(u) -> u["name"],

   |                --------- first arm returns `Option<String>`
22 |     None -> "unknown",
   |             ^^^^^^^^^
   |             --------- arm 2 returns `String`

Help:
  All match arms must return the same type. Change arm 2 to return `Option<String>`.
  Suppressed 1 nearby duplicate E300 diagnostic(s).


--> compiler error[E300]: TYPE UNIFICATION ERROR

The arms of this `match` expression produce different types.

  --> examples/basics/array_hash_combo.flx:27:13
   |
26 |     Some(u) -> u["name"],

   |                --------- first arm returns `Option<String>`
27 |     None -> "unknown",
   |             ^^^^^^^^^
   |             --------- arm 2 returns `String`

Help:
  All match arms must return the same type. Change arm 2 to return `Option<String>`.
  Suppressed 1 nearby duplicate E300 diagnostic(s).


--> compiler error[E300]: TYPE UNIFICATION ERROR

The arms of this `match` expression produce different types.

  --> examples/basics/array_hash_combo.flx:32:13
   |
31 |     Some(u) -> u["age"],

   |                -------- first arm returns `Option<String>`
32 |     None -> 0,
   |             ^
   |             - arm 2 returns `Int`

Help:
  All match arms must return the same type. Change arm 2 to return `Option<String>`.
  Suppressed 1 nearby duplicate E300 diagnostic(s).


--> compiler error[E300]: TYPE UNIFICATION ERROR

The arms of this `match` expression produce different types.

  --> examples/basics/array_hash_combo.flx:37:13
   |
36 |     Some(u) -> u["age"],

   |                -------- first arm returns `Option<String>`
37 |     None -> 0,
   |             ^
   |             - arm 2 returns `Int`

Help:
  All match arms must return the same type. Change arm 2 to return `Option<String>`.
  Suppressed 1 nearby duplicate E300 diagnostic(s).


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/array_hash_combo.flx:41:1
   |
41 | print(first_name);
   | ^^^^^^^^^^^^^^^^^^
   | ------------------ top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E414]: MISSING MAIN FUNCTION

Effectful program is missing `fn main` root effect handler.

  --> examples/basics/array_hash_combo.flx:41:1
   |
41 | print(first_name);
   | ^^^^^^^^^^^^^^^^^^
   | ------------------ effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/array_hash_combo.flx:43:1
   |
43 | match first_name {
   | ^^^^^^^^^^^^^^^^^^
44 |   Some(v) -> print("unwrap value #{v}"),
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
45 |   None -> print("unknown"),
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
46 |   _ -> print("unknown"),
   | ^^^^^^^^^^^^^^^^^^^^^^^^
47 | };
   | ^^

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/array_hash_combo.flx:50:1
   |
50 | print(second_name);
   | ^^^^^^^^^^^^^^^^^^^
   | ------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/array_hash_combo.flx:51:1
   |
51 | print(first_age);
   | ^^^^^^^^^^^^^^^^^
   | ----------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/array_hash_combo.flx:52:1
   |
52 | print(second_age);
   | ^^^^^^^^^^^^^^^^^^
   | ------------------ top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E300]: TYPE UNIFICATION ERROR

The arms of this `match` expression produce different types.

  --> examples/basics/array_hash_combo.flx:62:13
   |
61 |     Some(v) -> v[0],

   |                ---- first arm returns `Option<String>`
62 |     None -> "no languages",
   |             ^^^^^^^^^^^^^^
   |             -------------- arm 2 returns `String`

Help:
  All match arms must return the same type. Change arm 2 to return `Option<String>`.
  Suppressed 1 nearby duplicate E300 diagnostic(s).


--> compiler error[E300]: TYPE UNIFICATION ERROR

The arms of this `match` expression produce different types.

  --> examples/basics/array_hash_combo.flx:67:13
   |
66 |     Some(v) -> v[1],

   |                ---- first arm returns `Option<String>`
67 |     None -> "no languages",
   |             ^^^^^^^^^^^^^^
   |             -------------- arm 2 returns `String`

Help:
  All match arms must return the same type. Change arm 2 to return `Option<String>`.
  Suppressed 1 nearby duplicate E300 diagnostic(s).


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/array_hash_combo.flx:70:1
   |
70 | print(first_lang);
   | ^^^^^^^^^^^^^^^^^^
   | ------------------ top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/array_hash_combo.flx:71:1
   |
71 | print(second_lang);
   | ^^^^^^^^^^^^^^^^^^^
   | ------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/array_hash_combo.flx:72:1
   |
72 | print(skills["count"]);
   | ^^^^^^^^^^^^^^^^^^^^^^^
   | ----------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.

Found 15 errors.
== stdout ==
<not executed>
